Wed Jan 19 01:55:01 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_create): RubyVM#send argumenst are visible as
	  RubyVM::ARGV from inside of a called VM.

Wed Jan 19 01:44:00 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (wormhole_interpret_this_obj): Bug fix.  rb_ary_new2()
	  do not set its length so we should not directly assign, just use
	  rb_ary_push() instead.

	* intervm.c (wormhole_dealloc): Bug fix.  Wormholes can how
	  contain immediates, so this RBASIC() should cause SIGSEGV.

Tue Jan 18 02:48:47 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_create): When a VM was created, it has inherited its
	  parent VM's thread group.  This is a problem.  We kill that
	  here.  But there should be discussions whether this operation is
	  OK, because doing this makes a VM "escaped" from a thread group.
	  Care might be taken?

Mon Jan 17 13:43:07 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (gc_mark_children): Add assertion again.  No inter-VM
	  objects should be stored onto another VM's object space.

	* parse.y (rb_id2str): This string's class should always be
	  updated because the string can be from other VM's object space,
	  and hence klass can point to another rb_cString from different
	  universe.

Sun Jan 16 22:48:30 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (rb_vm_start): now takes variable arguments.

Sun Jan 16 22:35:00 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_wormhole_peek): signaling pump can happen
	  prior to a wormhole allocation.

	* vm.c (vm_init2): Proper initialize.

Sun Jan  9 11:20:49 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* README: bit update.

Sat Jan  8 17:36:05 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_wormhole_send): can now send an array, as
	  long as it does not include any non-sendable objects.

Sat Jan  8 10:26:29 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
